added info and new questions

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-</head>
 <title>Reasearch Website</title>
-
-
+<style>
+body{margin:40px
+auto;max-width:750px;line-height:1.6;font-size:18px;color:#444;padding:0
+10px}h1,h2,h3{line-height:1.2}
+</style>
 
 
 
@@ -12,12 +14,29 @@
 
 <body>
 	<div>
+		
+		<h3>Task</h3>
 		<p>
-			Here I will put some instructions.
-		</p>
+			You will be presented with a student's work and incorrect output on the left and a suggestion on the right. For each suggestion, there are three versions:</p>
+			<ul>
+				<li>a natrual language suggestions</li>
+				<li>a correction of similar code but different context domain (library members and books)</li>
+				<li>a correction of similar code in the same context domain (students and classes)</li>
+			</ul>
 		<p>
-			<a href="main.html">Here is the link</a>
 		</p>
+		<h3>Using the website</h3>
+		<p>
+			Use Chrome if possible.
+			<br>
+			There are controls at the top to upload a json file (provided seperately) that contains the survey. Once that file is uploaded, the problem and suggestion should be populated. You can navigate through each problem or suggestions using the corresponding buttons. Use the checkboxes, dropdown, and textbox to fill out the survey. There are keyboard shortcuts for most of the operations (including rating).
+			<br>
+			Upon completion of the survey, click the export button at the top and send that file to me. Thank you!
+			<br>
+			<br>
+			YOU MUST EXPORT TO SAVE YOUR WORK. DO NOT CLOSE OR REFRESH THE PAGE BEFORE EXPORTING.
+		</p>
+		<h3><a href="main.html">Survey Link</a></h3>
 	</div>
 </body>
 </html>
