--- a/main.html
+++ b/main.html
@@ -40,14 +40,15 @@
 		<div id=page_suggestion class="column page">Suggestion goes here</div>
 		<div id=page_controls class="column page">
 			<div id=suggestion_controls class="row">
-				<div id=suggestion_control_left class="column control"><button id="suggestion_turn_left_button" type="button">Prev Suggestion</button></div>
+				<div id=suggestion_control_left class="column control"><button id="suggestion_turn_left_button" type="button">Prev Suggestion ([)</button></div>
 				<div id=suggestion_control_center class="column control"></div>
-				<div id=suggestion_control_right class="column control"><button id="suggestion_turn_right_button" type="button">Next Suggestion</button></div>
+				<div id=suggestion_control_right class="column control"><button id="suggestion_turn_right_button" type="button">Next Suggestion (])</button></div>
 			</div>
-			<div id="recognize_select_div" class="row"><input type=checkbox id="recognize_checkbox">Able to recognize problem</input></div>
-			<div id="helpful_select_div" class="row"><input type=checkbox id="helpful_checkbox"></input>Suggestion was helpful in recognizing problem</div>
-			<div id="suggest_select_div" class="row"><input type=checkbox id="suggest_checkbox"></input>You would suggest this as a fix to the problem</div>
-			<div id="rating_select_div" class="row">Rate the suggestion out of 5: 
+			<div id="recognize_select_div" class="row"><input type=checkbox id="recognize_checkbox">(A)ble to recognize problem</input></div>
+			<div id="helpful_select_div" class="row"><input type=checkbox id="helpful_checkbox"></input>(S)uggestion was helpful in recognizing problem</div>
+			<div id="suggest_select_div" class="row"><input type=checkbox id="suggest_checkbox"></input>(Y)ou would suggest this as a fix to the problem</div>
+			<div id="want_select_div" class="row"><input type=checkbox id="want_checkbox"></input>(I)f you had this problem, you would have liked this as a fix to the problem</div>
+			<div id="rating_select_div" class="row">Rate the suggestion (1-5): 
 				<select id=rating_select>
 					<option value="null" selected="selected">no rating</option>
 					<option value="1">1</option>
@@ -57,6 +58,7 @@
 					<option value="5">5</option>
 				</select>
 			</div>
+			
 			<div class="row">
 				<p id=comment>
 				
