added more info

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Reasearch Website</title>
+<title>Research</title>
 <style>
 body{margin:40px
 auto;max-width:750px;line-height:1.6;font-size:18px;color:#444;padding:0
@@ -17,19 +17,30 @@ auto;max-width:750px;line-height:1.6;font-size:18px;color:#444;padding:0
 		
 		<h3>Task</h3>
 		<p>
-			You will be presented with a student's work and incorrect output on the left and a suggestion on the right. For each suggestion, there are three versions:</p>
+			You will be presented with a student's work and erroneous/incorrect output on the left and a suggestion on the right. For each suggestion, there are three versions:</p>
 			<ul>
 				<li>a natrual language suggestions</li>
 				<li>a correction of similar code but different context domain (library members and books)</li>
 				<li>a correction of similar code in the same context domain (students and classes)</li>
 			</ul>
 		<p>
+		<p>
+			The questions asked are as followed:
+			<ul>
+				<li>For a particular problem, were you able to recognize the fix to the erroneous/incorrect output?</li>
+				<li>For a particular suggestion, was it helpful in recognizing the fix?</li>
+				<li>For a particular suggestion, would you provide this suggestion to someone with this problem?</li>
+				<li>For a particular suggestion, would you have liked to have received this suggetion if you had this problem?</li>
+				<li>Rate the suggestion from 1-5, with 5 being the best.</li>
+				<li>Optionally leave any comments you have about the particular problem and its suggestions.</li>
+			</ul>
+		</p>
 		</p>
 		<h3>Using the website</h3>
 		<p>
 			Use Chrome if possible.
 			<br>
-			There are controls at the top to upload a json file (provided seperately) that contains the survey. Once that file is uploaded, the problem and suggestion should be populated. You can navigate through each problem or suggestions using the corresponding buttons. Use the checkboxes, dropdown, and textbox to fill out the survey. There are keyboard shortcuts for most of the operations (including rating).
+			There are controls at the top to upload a json file (provided seperately) that contains the survey. Once that file is uploaded, the problem and suggestion should be populated. You can navigate through each problem or suggestions using the corresponding buttons. Use the checkboxes, dropdown, and textbox to fill out the survey. There are keyboard shortcuts for most of the operations (including rating) in parentheses.
 			<br>
 			Upon completion of the survey, click the export button at the top and send that file to me. Thank you!
 			<br>
