--- a/main.html
+++ b/main.html
@@ -44,7 +44,7 @@
 				<div id=suggestion_control_center class="column control"></div>
 				<div id=suggestion_control_right class="column control"><button id="suggestion_turn_right_button" type="button">Next Suggestion (])</button></div>
 			</div>
-			<div id="recognize_select_div" class="row"><input type=checkbox id="recognize_checkbox">(A)ble to recognize problem</input></div>
+			<div id="recognize_select_div" class="row"><input type=checkbox id="recognize_checkbox">(A)ble to recognize the fix to this problem</input></div>
 			<div id="helpful_select_div" class="row"><input type=checkbox id="helpful_checkbox"></input>(S)uggestion was helpful in recognizing problem</div>
 			<div id="suggest_select_div" class="row"><input type=checkbox id="suggest_checkbox"></input>(Y)ou would suggest this as a fix to the problem</div>
 			<div id="want_select_div" class="row"><input type=checkbox id="want_checkbox"></input>(I)f you had this problem, you would have liked this as a fix to the problem</div>
