fixed prepost questions

--- a/main.html
+++ b/main.html
@@ -217,6 +217,7 @@
 					<div id=suggestion_control_center class="column control"></div>
 					<div id=suggestion_control_right class="column control"><button id="suggestion_turn_right_button" type="button">Next Suggestion (])</button></div>
 				</div>
+				<div id="encounter_select_div" class="row"><input type=checkbox id="encounter_checkbox">(D)o you think you would likely also encounter this same problem?</input></div>
 				<div id="recognize_select_div" class="row"><input type=checkbox id="recognize_checkbox">(A)ble to recognize the fix to this problem</input></div>
 				<div id="helpful_select_div" class="row"><input type=checkbox id="helpful_checkbox"></input>(S)uggestion was helpful in recognizing problem</div>
 				<div id="suggest_select_div" class="row"><input type=checkbox id="suggest_checkbox"></input>(Y)ou would suggest this as a fix to the problem</div>
@@ -231,7 +232,6 @@
 						<option value="5">5</option>
 					</select>
 				</div>
-				
 				<div class="row">
 					<p id=comment>
 					
