--- a/index.html
+++ b/index.html
@@ -17,16 +17,20 @@ auto;max-width:750px;line-height:1.6;font-size:18px;color:#444;padding:0
 		
 		<h3>Task</h3>
 		<p>
-			You will be presented with a student's work and erroneous/incorrect output on the left and a suggestion on the right. For each suggestion, there are three versions:</p>
+			Initially you will be asked some questions related to your programming experiences. Then you are asked to take on the perspective of different users to see what type of help you would like to receive when you have a programming problem.
+		</p>
+		<p>
+			Next, you will be presented with a student's work and erroneous/incorrect output on the left and a suggestion on the right. For each suggestion, there are three versions:</p>
 			<ul>
 				<li>a natrual language suggestions</li>
 				<li>a correction of similar code but different context domain (library members and books)</li>
 				<li>a correction of similar code in the same context domain (students and classes)</li>
 			</ul>
+		</p>
 		<p>
-		<p>
-			The questions asked are as followed:
+			The questions asked in this section are as followed:
 			<ul>
+				<li>For a particular problem, do you think you would likely encounter this same problem?</li>
 				<li>For a particular problem, were you able to recognize the fix to the erroneous/incorrect output?</li>
 				<li>For a particular suggestion, was it helpful in recognizing the fix?</li>
 				<li>For a particular suggestion, would you provide this suggestion to someone with this problem?</li>
@@ -35,6 +39,8 @@ auto;max-width:750px;line-height:1.6;font-size:18px;color:#444;padding:0
 				<li>Optionally leave any comments you have about the particular problem and its suggestions.</li>
 			</ul>
 		</p>
+		<p>
+			Finally, you will repeat some of the initial questions having now gone through the students problems portion of the survey and taking that into account.
 		</p>
 		<h3>Using the website</h3>
 		<p>
