changin survey to be shorter

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ auto;max-width:750px;line-height:1.6;font-size:18px;color:#444;padding:0
 		
 		<h3>Task</h3>
 		<p>
-			Initially you will be asked some questions related to your programming experiences. Then you are asked to take on the perspective of different users to see what type of help you would like to receive when you have a programming problem.
+			Initially you will be asked some questions related to your programming experiences. Then you are asked to take on the perspective of different users to see what type of help you would like to receive when you have a programming problem. Please complete the survey for each user type, even the ones you did not select best represent you.
 		</p>
 		<p>
 			Next, you will be presented with a student's work and erroneous/incorrect output on the left and a suggestion on the right. For each suggestion, there are three versions:</p>
@@ -30,13 +30,13 @@ auto;max-width:750px;line-height:1.6;font-size:18px;color:#444;padding:0
 		<p>
 			The questions asked in this section are as followed:
 			<ul>
-				<li>For a particular problem, do you think you would likely encounter this same problem?</li>
 				<li>For a particular problem, were you able to recognize the fix to the erroneous/incorrect output?</li>
+				<!--<li>For a particular problem, do you think you would likely encounter this same problem?</li>
 				<li>For a particular suggestion, was it helpful in recognizing the fix?</li>
 				<li>For a particular suggestion, would you provide this suggestion to someone with this problem?</li>
-				<li>For a particular suggestion, would you have liked to have received this suggetion if you had this problem?</li>
-				<li>Rate the suggestion from 1-5, with 5 being the best.</li>
-				<li>Optionally leave any comments you have about the particular problem and its suggestions.</li>
+				<li>For a particular suggestion, would you have liked to have received this suggetion if you had this problem?</li>-->
+				<li>For each suggestion to a problem, rate it from 1-5, with 5 being the best. A good suggestion would help you figure out the fix to the problem.</li>
+				<li>Optionally leave any comments you have about the particular problem or its suggestions. Or if there are any nuances the rating does not reflect.</li>
 			</ul>
 		</p>
 		<p>
