no long need to upload survey

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ auto;max-width:750px;line-height:1.6;font-size:18px;color:#444;padding:0
 
 <body>
 	<div>
+		<h2>Survey on language dependent transient errors</h2>
+		<h3>By James Jushchuk</h3>
 		
 		<h3>Task</h3>
 		<p>
@@ -22,7 +24,7 @@ auto;max-width:750px;line-height:1.6;font-size:18px;color:#444;padding:0
 		<p>
 			Next, you will be presented with a student's work and erroneous/incorrect output on the left and a suggestion on the right. For each suggestion, there are three versions:</p>
 			<ul>
-				<li>a natrual language suggestions</li>
+				<li>a natural language suggestions</li>
 				<li>a correction of similar code but different context domain (library members and books)</li>
 				<li>a correction of similar code in the same context domain (students and classes)</li>
 			</ul>
@@ -46,7 +48,7 @@ auto;max-width:750px;line-height:1.6;font-size:18px;color:#444;padding:0
 		<p>
 			Use Chrome if possible.
 			<br>
-			There are controls at the top to upload a json file (provided seperately) that contains the survey. Once that file is uploaded, the problem and suggestion should be populated. You can navigate through each problem or suggestions using the corresponding buttons. Use the checkboxes, dropdown, and textbox to fill out the survey. There are keyboard shortcuts for most of the operations (including rating) in parentheses.
+			You can navigate through each problem or suggestions using the corresponding buttons. Use the checkboxes, dropdown, and textbox to fill out the survey. For the main part of the survey, there are keyboard shortcuts for most of the operations (including rating) in parentheses.
 			<br>
 			Upon completion of the survey, click the export button at the top and send that file to me. Thank you!
 			<br>
