--- a/main.html
+++ b/main.html
@@ -19,7 +19,8 @@
 <body>
 	<div id=toolbar class="row">
 		<div class="column">
-			<div id="file_loader_exporter" class="column"><input type="file" id="file_upload" name="file" />
+			<div id="file_loader_exporter" class="column">
+				<!--<input type="file" id="file_upload" name="file" />-->
 				<input type="text" id=file_export_name placeholder="filename"/>
 				<button type="button" id="file_export">Export</button>
 			</div>
@@ -28,7 +29,7 @@
 	
 	<div id="outer">
 		<div id="outer_start">
-			<p>Please upload survey JSON file to get started.</p>
+			<p>loading survey...</p>
 		</div>
 		
 		<div id="outer_questions">
